test/visibility/import/public/no-param-import.good
no-param-import.chpl:1: In module 'Foo':
no-param-import.chpl:4: error: cannot find module named 'p'
no-param-import.chpl:2: note: a declaration of 'p' is here
no-param-import.chpl:2: note: however, 'import' statements can only be used with modules (and this 'p' is not a module)
